k8s-logstash.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: logstash
  namespace: elk-stack
  labels:
    app: logstash
spec:
  ports:
    - port: 9600
  selector:
    app: logstash
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: logstash
  namespace: elk-stack
  labels:
    app: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
        - name: logstash
          ports:
            - containerPort: 9600
          image: docker.elastic.co/logstash/logstash:7.8.0
          volumeMounts:
            - name: config
              mountPath: /usr/share/logstash/config/logstash.yml
              subPath: logstash.yml
              readOnly: true
            - name: pipeline
              mountPath: /usr/share/logstash/pipeline
              readOnly: true
          command:
            - logstash
          resources:
            limits:
              memory: 1Gi
              cpu: "200m"
            requests:
              memory: 400m
              cpu: "200m"
      volumes:
        - name: pipeline
          configMap:
            name: logstash-config
            items:
              - key: logstash.conf
                path: logstash.conf
        - name: config
          configMap:
            name: logstash-config
            items:
              - key: logstash.yml
                path: logstash.yml
