k8s-ingress-kibana.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: elk-stack
spec:
  rules:
  - host: yourdomain.example.com
    http:
      paths:
      - backend:
          serviceName: kibana
          servicePort: 80
